# rag-mcp

./: .env.example  .gitignore  CLAUDE_CUSTOM_CONNECTOR_SETUP.md  Cargo.toml  README.md  claude_desktop_config.json.example  cloudflared-config.yaml.example  config.toml.example  custom_connector_example.json
dashboard/: .env.example  .gitignore  README.md  next.config.js  next.config.ts  package-lock.json  package.json  patch-fs.js
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/documents/: route.ts
dashboard/app/api/embeddings/: route.ts
dashboard/app/embeddings/: page.tsx
dashboard/app/login/: page.tsx
dashboard/app/visualizer/: page.tsx
dashboard/components/: AutoRefresh.tsx  DocumentTree.tsx  DocumentViewer.tsx  DynamicMain.tsx  EmbeddingStats.tsx  EmbeddingVisualizer.tsx  HealthIndicator.tsx  KnowledgeGraph.tsx  LogsTable.tsx  MissingEmbeddingsList.tsx  NamespaceTable.tsx  PageIndexPanel.tsx  RefreshButton.tsx  Sidebar.tsx  SidebarContext.tsx  StatsCard.tsx  TimeFilter.tsx
dashboard/lib/: auth.ts  db.ts  queries.ts  time-utils.ts  types.ts  vector-utils.ts
migrations/: 001_core_tables.sql  002_fts5_tables.sql  003_graph_telemetry.sql  004_performance_indexes.sql  005_hash_index.sql  006_document_operations.sql  007_pageindex_tables.sql
pageindex_sidecar/: pageindex_sidecar.py  requirements.txt
src/: config.rs  error.rs  lib.rs  main.rs
src/cache/: chunk_embedding_cache.rs  embedding_cache.rs  mod.rs
src/db/: migrate.rs  mod.rs
src/embeddings/: mod.rs  openai.rs  storage.rs
src/eval/: metrics.rs  mod.rs  query.rs
src/graph/: extraction.rs  mod.rs  traversal.rs
src/ingest/: chunker.rs  db_writer.rs  incremental.rs  metadata.rs  mod.rs  walker.rs
src/ingest/parsers/: json.rs  markdown.rs  mod.rs  plaintext.rs  xml.rs  yaml.rs
src/mcp/: audit.rs  http.rs  mod.rs  roots.rs  server.rs  tools.rs  types.rs
src/pageindex/: manager.rs  mod.rs
src/search/: bm25.rs  hybrid.rs  mod.rs  vector.rs
src/watch/: mod.rs  watcher.rs
(+7 files in other folders)
